--- a/src/graphics/meson.build
+++ b/src/graphics/meson.build
@@ -8,6 +8,6 @@ powder_graphics_files = files(
 	'Renderer.cpp',
 )
 
-powder_source_files += graphics_files + powder_graphics_files
+powder_files += graphics_files + powder_graphics_files
 render_files += graphics_files + powder_graphics_files
 font_files += graphics_files
