--- a/src/meson.build
+++ b/src/meson.build
@@ -109,7 +109,7 @@ if host_platform == 'android'
 	conf_data.set('ANDROID_PROPERTIES', '\n'.join(android_properties))
 endif
 
-powder_source_files = files(
+powder_files = files(
 	'SDLCompat.cpp',
 	'PowderToySDL.cpp',
 	'PowderToy.cpp',
@@ -119,16 +119,16 @@ powder_source_files = files(
 powder_external_files = []
 
 if host_platform == 'emscripten'
-	powder_source_files += files(
+	powder_files += files(
 		'PowderToySDLEmscripten.cpp',
 	)
 else
-	powder_source_files += files(
+	powder_files += files(
 		'PowderToySDLCommon.cpp',
 	)
 endif
 if is_x86
-	powder_source_files += files('X86KillDenormals.cpp')
+	powder_files += files('X86KillDenormals.cpp')
 endif
 
 render_files = files(
@@ -165,7 +165,7 @@ else
 endif
 
 if host_platform == 'linux'
-	powder_source_files += files('WindowIcon.cpp')
+	powder_files += files('WindowIcon.cpp')
 	font_files += files('WindowIcon.cpp')
 endif
 
@@ -180,7 +180,7 @@ if lua_variant != 'none'
 	subdir('lua')
 	conf_data.set('LUACONSOLE', 'true')
 else
-	powder_source_files += files(
+	powder_files += files(
 		'lua/PlainCommandInterface.cpp',
 	)
 	conf_data.set('LUACONSOLE', 'false')
@@ -190,7 +190,7 @@ subdir('resampler')
 subdir('simulation')
 subdir('tasks')
 
-powder_source_files += common_files
+powder_files += common_files
 render_files += common_files
 font_files += common_files
 
