Update MOTH and MEGG

--- a/src/simulation/meson.build
+++ b/src/simulation/meson.build
@@ -1,29 +1,210 @@
-simulation_files = files(
-	'Air.cpp',
-	'AccessProperty.cpp',
-	'Element.cpp',
-	'ElementClasses.cpp',
-	'GOLString.cpp',
-	'Particle.cpp',
-	'SaveRenderer.cpp',
-	'Sign.cpp',
-	'SimulationData.cpp',
-	'Simulation.cpp',
-	'StructProperty.cpp',
-)
+simulation_elem_names = [
+	'NONE',
+	'DUST',
+	'WATR',
+	'OIL',
+	'FIRE',
+	'STNE',
+	'LAVA',
+	'GUNP',
+	'NITR',
+	'CLNE',
+	'GAS',
+	'PLEX',
+	'GOO',
+	'ICEI',
+	'METL',
+	'SPRK',
+	'SNOW',
+	'WOOD',
+	'NEUT',
+	'PLUT',
+	'PLNT',
+	'ACID',
+	'VOID',
+	'WTRV',
+	'CNCT',
+	'DSTW',
+	'SALT',
+	'SLTW',
+	'DMND',
+	'BMTL',
+	'BRMT',
+	'PHOT',
+	'URAN',
+	'WAX',
+	'MWAX',
+	'PSCN',
+	'NSCN',
+	'LNTG',
+	'INSL',
+	'BHOL',
+	'WHOL',
+	'RBDM',
+	'LRBD',
+	'NTCT',
+	'SAND',
+	'GLAS',
+	'PTCT',
+	'BGLA',
+	'THDR',
+	'PLSM',
+	'ETRD',
+	'NICE',
+	'NBLE',
+	'BTRY',
+	'LCRY',
+	'STKM',
+	'SWCH',
+	'SMKE',
+	'DESL',
+	'COAL',
+	'LO2',
+	'O2',
+	'INWR',
+	'YEST',
+	'DYST',
+	'THRM',
+	'GLOW',
+	'BRCK',
+	'CFLM',
+	'FIRW',
+	'FUSE',
+	'FSEP',
+	'AMTR',
+	'BCOL',
+	'PCLN',
+	'HSWC',
+	'IRON',
+	'MORT',
+	'LIFE',
+	'DLAY',
+	'CO2',
+	'DRIC',
+	'CBNW',
+	'STOR',
+	'PVOD',
+	'CONV',
+	'CAUS',
+	'LIGH',
+	'TESC',
+	'DEST',
+	'SPNG',
+	'RIME',
+	'FOG',
+	'BCLN',
+	'LOVE',
+	'DEUT',
+	'WARP',
+	'PUMP',
+	'FWRK',
+	'PIPE',
+	'FRZZ',
+	'FRZW',
+	'GRAV',
+	'BIZR',
+	'BIZRG',
+	'BIZRS',
+	'INST',
+	'ISOZ',
+	'ISZS',
+	'PRTI',
+	'PRTO',
+	'PSTE',
+	'PSTS',
+	'ANAR',
+	'VINE',
+	'INVIS',
+	'E116',
+	'SPAWN2',
+	'SPAWN',
+	'SHLD1',
+	'SHLD2',
+	'SHLD3',
+	'SHLD4',
+	'LOLZ',
+	'WIFI',
+	'FILT',
+	'ARAY',
+	'BRAY',
+	'STKM2',
+	'BOMB',
+	'C5',
+	'SING',
+	'QRTZ',
+	'PQRT',
+	'EMP',
+	'BREC',
+	'ELEC',
+	'ACEL',
+	'DCEL',
+	'BANG',
+	'IGNT',
+	'BOYL',
+	'GEL',
+	'TRON',
+	'TTAN',
+	'EXOT',
+	disabler(),
+	'EMBR',
+	'H2',
+	'SOAP',
+	'NBHL',
+	'NWHL',
+	'MERC',
+	'PBCN',
+	'GPMP',
+	'CLST',
+	'WIRE',
+	'GBMB',
+	'FIGH',
+	'FRAY',
+	'RPEL',
+	'PPIP',
+	'DTEC',
+	'DMG',
+	'TSNS',
+	'VIBR',
+	'BVBR',
+	'CRAY',
+	'PSTN',
+	'FRME',
+	'GOLD',
+	'TUNG',
+	'PSNS',
+	'PROT',
+	'VIRS',
+	'VRSS',
+	'VRSG',
+	'GRVT',
+	'DRAY',
+	'CRMC',
+	'HEAC',
+	'SAWD',
+	'POLO',
+	'RFRG',
+	'RFGL',
+	'LSNS',
+	'LDTC',
+	'SLCN',
+	'PTNM',
+	'VSNS',
+	'ROCK',
+	'LITH',
+	'RSST',
+	'RSSS',
+	'MOTH',
+	'MEGG'
+]
 
-subdir('elements')
-subdir('simtools')
-subdir('gravity')
-
-powder_files += simulation_files
-render_files += simulation_files
-
-powder_files += files(
-	'AccessPropertyParse.cpp',
-	'Editing.cpp',
-	'SimTool.cpp',
-	'ToolClasses.cpp',
-	'Snapshot.cpp',
-	'SnapshotDelta.cpp',
-)
+simulation_elem_src = []
+simulation_elem_ids = []
+elem_id = 0
+foreach elem_name : simulation_elem_names
+	if not is_disabler(elem_name)
+		simulation_elem_src += elem_name + '.cpp'
+		simulation_elem_ids += [ [ elem_name, elem_id ] ]
+	endif
+	elem_id = elem_id + 1
+endforeach
+simulation_files += files(simulation_elem_src)
