Move version strings to meson.build
This makes it possible for meson to detect changes to these version numbers, unlike when they were just the default values for options that build sites would retain and fall out of sync.

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,8 @@
-project('the-powder-toy', 'cpp', version: 'the.cake.is.a.lie', meson_version: '>=0.64.0')
+project('the-powder-toy', 'cpp', version: '99.3.386', meson_version: '>=0.64.0')
+# if you are a mod developer and don't mind dealing with merge conflicts,
+# you can replace 'the-powder-toy' with your mod's simplified name, and version: 'X.Y.Z' with version: 'A.B.C-upstream-X.Y.Z'
+# where A.B.C is your mod's version (you can change this to anything) and X.Y.Z is the upstream version (merge this from upstream)
+# this is purely cosmetic though: it only affects what meson prints when setting up build sites
 
 if get_option('prepare')
 	# we're being run by prepare.py in a ghactions workflow only to determine the values of options; exit early
@@ -115,6 +119,7 @@ else
 				static: bzip2_static,
 			),
 			include_directories: bzip2_include_dir,
+			version: '1.0.8-elusive',
 		))
 	endif
 endif
