Clarify version number meaning in meson.build
Also make it easier to customize it without merge conflicts.

--- a/meson.build
+++ b/meson.build
@@ -1,8 +1,9 @@
-project('the-powder-toy', 'cpp', version: '99.3.386', meson_version: '>=0.64.0')
-# if you are a mod developer and don't mind dealing with merge conflicts,
-# you can replace 'the-powder-toy' with your mod's simplified name, and version: 'X.Y.Z' with version: 'A.B.C-upstream-X.Y.Z'
-# where A.B.C is your mod's version (you can change this to anything) and X.Y.Z is the upstream version (merge this from upstream)
-# this is purely cosmetic though: it only affects what meson prints when setting up build sites
+project('the-powder-toy', 'cpp', version:
+#	'A.B.C-upstream-' + # if you're a mod developer, remove the first # from this line and customize A.B.C to your liking.
+#	                    # A.B.C is the version number shown by meson and by your local builds. note that this version
+#	                    # number is overridden by the tag you push to github, so ghactions builds will show that version
+#	                    # number instead. you can also replace 'the-powder-toy' with your mod's simplified name.
+	'99.3.386', meson_version: '>=0.64.0')
 
 if get_option('prepare')
 	# we're being run by prepare.py in a ghactions workflow only to determine the values of options; exit early
