Specify working directory for the serve-locally target
Meson doc says that run_targets are run in an unspecified directory.

--- a/meson.build
+++ b/meson.build
@@ -632,6 +632,7 @@ if host_platform == 'emscripten'
 		command: [
 			python3_prog,
 			serve_wasm_py,
+			'@BUILD_ROOT@',
 		],
 		depends: powder_exe,
 	)
