Revive Windows XP support with msys2 mingw32
Old icons taken from 84f3f3cdba1d. These are legacy ICO format files (i.e. not bootleg PNGs) so they don't participate in the evolution of new icons, but that's fine, XP support is mainly nostalgia anyway.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -70,7 +70,7 @@ jobs:
       - if: matrix.force_msys2_bash == 'yes'
         uses: msys2/setup-msys2@v2
         with:
-          msystem: UCRT64
+          msystem: ${{ matrix.msys2_msystem }}
           update: true
           path-type: strict
           cache: true
