--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -113,12 +113,14 @@ jobs:
           ASSET_PATH: build/${{ matrix.asset_path }}
           ASSET_NAME: ${{ matrix.asset_name }}
         run: bash -c './.github/upload-release-asset.sh'
+        shell: bash
       - if: needs.prepare.outputs.do_release == 'yes' && matrix.publish == 'yes' && matrix.separate_debug == 'yes'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ASSET_PATH: build/${{ matrix.debug_asset_path }}
           ASSET_NAME: ${{ matrix.debug_asset_name }}
         run: bash -c './.github/upload-release-asset.sh'
+        shell: bash
       - uses: actions/upload-artifact@v4
         if: matrix.artifact == 'yes'
         with:
